[Offline Pages] Handle prerender FinalStatus UnsupportedScheme as a cancel rather than failure. Losing network connection while prerendering can show up as an Unsupported Scheme failure currently as it sees a special data URL in path toward rendering an error page. We don't want a flakey network connection fail a background load request on just a single try, so for now, we will treat this specific error type as a cancel rather than a failure so that it is subject some limited retrying. The down side, is that for some page that has a repeatable redirect to an unsupported scheme, we will waste some retries on it that we otherwise could skip.

Ideally, we could get a different final status code from the prerenderer if it could clearly distinguish a network failure condition but it does not currently have such knowledge.

BUG=642025

Review-Url: https://codereview.chromium.org/2294933003
Cr-Commit-Position: refs/heads/master@{#415673}

Former-commit-id: 27e86c877f293dec2693281e7848e4d61a95ba4c